Tue Mar 13 12:37:53 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_encoding_set): always warn if external encoding and internal
	  encoding are identical. [ruby-core:40727] [Bug #5568]

Tue Mar 13 12:37:03 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	Bug #5350

	* gc.c: add ObjectSpace::WeakMap.  [ruby-dev:44565][Bug #5350]

	* lib/weakref.rb: use WeakMap instead of _id2ref.

Tue Mar 13 10:59:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (prepare): skip if basedir is not defined.
	  [ruby-core:39135][Bug #5238]

	* tool/rbinstall.rb (CONFIG.[]): check for mandatory
	  configurations.

Tue Mar 13 00:09:18 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* enumerator.c (enumerable_lazy): added documentation.

Mon Mar 12 20:19:25 2012  Tanaka Akira  <akr@fsij.org>

	* lib/tmpdir.rb (Dir::tmpdir): test the current directory suitable for
	  temporary directory.

Mon Mar 12 20:08:16 2012  Tanaka Akira  <akr@fsij.org>

	* lib/fileutils.rb (fu_have_symlink?): specify TypeError for rescue
	  clause.

Mon Mar 12 19:23:13 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_find_encoding): new function find encoding from
	  arbitrary object as a pointer to rb_encoding, and return NULL if
	  not found.

	* io.c (io_encoding_set): just warn unsupported encodings, but not
	  exception.  [ruby-core:40726] [Bug #5567]

Mon Mar 12 19:03:32 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (Init_eval_method): respond_to? and
	  respond_to_missing? are public.

Mon Mar 12 14:56:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.h (NEW_YIELD), parse.y (new_yield_gen): array-values flags
	  has been already obsolete.  patch by Thomas Enebo.
	  [ruby-core:41929][Bug #5847]

Mon Mar 12 12:44:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (Init_eval_method): copy basic methods to Exception.
	  [ruby-core:40287][Bug #5473]

Mon Mar 12 10:13:36 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
